--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -66,6 +66,11 @@
 
 <noscript id="deferred-styles">
   <link rel="stylesheet" type="text/css" href="{{ "/css/style.min.css" | prepend: site.baseurl | prepend: site.url }}" />
+  {% if page.styles %}
+    {% for style in page.styles %}
+      <link rel="stylesheet" type="text/css" href="{{ style }}" />
+    {% endfor %}
+  {% endif %}
 </noscript>
 <script>
   var loadDeferredStyles = function() {
@@ -89,12 +94,23 @@
 <![endif]-->
 
 <!-- Common JavaScript -->
+{% if jekyll.environment == 'production' %}
 <script src="{{ "/js/common.min.js " | prepend: site.baseurl | prepend: site.url }}"></script>
+{% else %}
+<script src="/js/common.min.js"></script>
+{% endif %}
 
 {% if page.scripts %}
 <!-- Custom JavaScript per page -->
+  {% for script in page.externalScripts %}
+    <script src="{{ script }}"></script>
+  {% endfor %}
   {% for script in page.scripts %}
-    <script src="{{ script | prepend: site.baseurl | prepend: site.url }}"></script>
+    {% if jekyll.environment == 'production' %}
+      <script src="{{ script | prepend: site.baseurl | prepend: site.url }}"></script>
+    {% else %}
+      <script src="{{ script }}"></script>
+    {% endif %}
   {% endfor %}
 
 {% endif %}
