--- a/less/projects.less
+++ b/less/projects.less
@@ -21,3 +21,68 @@
 #projects-filters .btn {
 	margin: 2px;
 }
+
+// Featured projects
+.featured-projects {
+	display: flex;
+	justify-content: space-between;
+
+	.project-summary {
+		background-position: center;
+		background-repeat: no-repeat;
+		height: 250px;
+		min-width: 250px;
+		max-width: 75%;
+		box-shadow: rgba(0, 0, 0, 0.1) 2px 2px;
+		margin: 20px auto;
+
+		// Add margin between on larger screens (row)
+		// Limit width
+		@media (min-width: @bp-lg) {
+			margin: 20px 10px;
+			max-width: 250px;
+		}
+
+		a {
+			display: flex;
+			flex-direction: column-reverse;
+			height: 100%;
+			width: 100%;
+			transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+			text-align: center;
+
+			&:hover, &:active {
+				text-decoration: none;
+				background-color: rgba(0, 0, 0, 0.6);
+			}
+
+			&:link .project-summary__title, &:visited .project-summary__title {
+				color: @gray-light;
+			}
+			&:hover .project-summary__title, &:active .project-summary__title {
+				color: white;
+				background-color: @brand-primary;
+			}
+			&:hover .project-summary__subtitle {
+				opacity: 1;
+			}
+		}
+
+		&__title {
+			display: block;
+			margin-bottom: 0;
+			padding: 5px 0;
+			min-height: 20%;
+			transition: background-color 0.3s ease-in-out;
+			background-color: rgba(0, 0, 0, 0.5);
+			color: @gray;
+		}
+		&__subtitle {
+			flex-grow: 3;
+			opacity: 0;
+			transition: opacity 0.3s ease-in-out;
+			padding: 10px;
+			color: white;
+		}
+	}
+}
