--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,11 @@
 // Variables
 
+// Colours
 @brand-primary: #0085A1;
 @gray-dark: lighten(black, 25%);
 @gray: lighten(black, 50%);
 @white-faded: fade(white, 80%);
 @gray-light: #eee;
+
+// Responsive breakpoints
+@bp-lg: 992px;
