--- a/_includes/layout/head.html
+++ b/_includes/layout/head.html
@@ -2,7 +2,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% if page.description %}
+    {% if page.metaDescription %}
+      {% assign description = page.metaDescription %}
+    {% elsif page.description %}
       {% assign description = page.description %}
     {% else %}
       {% assign description = site.description %}
@@ -28,7 +30,7 @@
     {% endif %}
     <!-- Polyfill preload -->
     <script type="text/javascript">
-      {% include js/cssrelpreload.js %}
+      {% include js/cssrelpreload.min.js %}
     </script>
 
     <!-- Minimal inline CSS -->
