--- a/_includes/post/post-summary.html
+++ b/_includes/post/post-summary.html
@@ -1,9 +1,9 @@
 <div class="post-preview container">
   <a href="{{ post.url | prepend: site.baseurl }}">
-  {% if post.header-img %}
+  {% if post.preview-img %}
   <div class="row">
     <div class="post-preview-img col-12 col-md-4">
-      <img class="img-fluid" src="{{ post.header-img | prepend: site.baseurl | prepend: site.url }}" alt="{{ post.title }}" />
+      <img class="img-fluid" src="{{ post.preview-img | prepend: site.baseurl | prepend: site.url }}" alt="{{ post.title }}" />
     </div>
     <div class="post-preview-content col-12 col-md-8">
   {% else %}
@@ -19,7 +19,7 @@
     <!--</a>-->
     <p class="post-meta">Posted by {% if post.author %}{{ post.author }}{% else %}{{ site.title }}{% endif %} on {{ post.date | date: "%B %-d, %Y" }}</p>
   </div>
-  {% if post.header-img %}</div>{% endif %}
+  {% if post.preview-img %}</div>{% endif %}
   </a>
 </div>
 {% if small and count != 2 %}
